# structgen

./: .gitignore  README.md  pyproject.toml
src/structgen/: __init__.py  cli.py  constants.py  utils.py
src/structgen/handlers/: __init__.py  atomic.py  charge.py  full.py  full_devel.py  molecular_devel.py  molecule.py
tests/: test_cli.py
tests/test_handlers/: __init__.py  test_charge.py
